# cratelite-lsp

./: Cargo.toml
.github/workflows/: release.yml
src/: crate_index.rs  feature_index.rs  lsp.rs  main.rs  toml_context.rs  toml_context_fallback.rs
